document domain_-functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,7 +79,7 @@ export(domain_is_categ)
 export(domain_is_number)
 export(domain_nlevels)
 export(domain_qunif)
-export(domain_storage_type)
+export(domain_sanitize)
 export(domain_test)
 export(generate_design_grid)
 export(generate_design_lhs)
