feat: aggr function for inner tuning

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ S3method(format,Condition)
 S3method(print,Condition)
 S3method(print,Domain)
 S3method(print,FullTuneToken)
+S3method(print,InnerTuneToken)
 S3method(print,ObjectTuneToken)
 S3method(print,RangeTuneToken)
 S3method(rd_info,ParamSet)
@@ -85,6 +86,7 @@ export(generate_design_grid)
 export(generate_design_lhs)
 export(generate_design_random)
 export(generate_design_sobol)
+export(in_tune)
 export(p_dbl)
 export(p_fct)
 export(p_int)
