--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,7 +49,7 @@ S3method(format,Condition)
 S3method(print,Condition)
 S3method(print,Domain)
 S3method(print,FullTuneToken)
-S3method(print,InnerTuneToken)
+S3method(print,InternalTuneToken)
 S3method(print,ObjectTuneToken)
 S3method(print,RangeTuneToken)
 S3method(rd_info,ParamSet)
