--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,7 @@ Authors@R:
              comment = c(ORCID = "0000-0003-3269-2307")),
       person(given = "Martin",
              family = "Binder",
-             role = c("aut", "cre"), 
+             role = c("aut", "cre"),
              email = "mlr.developer@mb706.com"),
       person(given = "Marc",
              family = "Becker",
@@ -59,7 +59,8 @@ Suggests:
 Encoding: UTF-8
 Config/testthat/edition: 3
 Config/testthat/parallel: false
-NeedsCompilation: no
+NeedsCompilation: yes
+LinkingTo: checkmate
 Roxygen: list(markdown = TRUE, r6 = TRUE)
 RoxygenNote: 7.3.1
 VignetteBuilder: knitr
