--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,3 +105,4 @@ importFrom(data.table,as.data.table)
 importFrom(methods,is)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
+useDynLib(paradox,c_paramset_ids)
