--- a/.github/workflows/revdep-check.yml
+++ b/.github/workflows/revdep-check.yml
@@ -15,7 +15,7 @@ jobs:
   revdep-check:
     runs-on: ${{ matrix.config.os }}
 
-    name: ${{ matrix.config.os }} (${{ matrix.config.r }})
+    name: revdep ${{ matrix.config.pkg }} (${{ matrix.config.os }}, ${{ matrix.config.r }})
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
@@ -36,13 +36,33 @@ jobs:
         with:
           repository: ${{ matrix.config.pkg }}
 
+      - uses: r-lib/actions/setup-pandoc@v2
+        if: matrix.config.pkg == 'mlr-org/mlr3mbo'
+
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
+
+      - uses: supercharge/redis-github-action@1.7.0
+        if: contains(fromJSON('["mlr-org/bbotk", "mlr-org/mlr3mbo"]'), github.event_name)
+        with:
+          redis-version: 7
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: any::rcmdcheck
           needs: check
 
+      - name: Install dev versions
+        run: pak::pkg_install('${{ GITHUB_REPOSITORY }}@${{ GITHUB_REF_NAME }}')
+        shell: Rscript {0}
+
       - uses: r-lib/actions/check-r-package@v2
+        name: Normal check
+        if: !contains(fromJSON('["mlr-org/bbotk", "mlr-org/mlr3mbo"]'), github.event_name)
+
+      - uses: r-lib/actions/check-r-package@v2
+        name: bbotk check
+        if: contains(fromJSON('["mlr-org/bbotk", "mlr-org/mlr3mbo"]'), github.event_name)
+        with:
+          args: 'c("--no-manual")' # "--as-cran" prevents to start external processes
