--- a/.github/workflows/revdep-check.yml
+++ b/.github/workflows/revdep-check.yml
@@ -54,7 +54,7 @@ jobs:
           needs: check
 
       - name: Install dev versions
-        run: pak::pkg_install('${{ GITHUB_REPOSITORY }}@${{ GITHUB_REF_NAME }}')
+        run: pak::pkg_install('${{ github.repository }}@${{ github.sha }}')
         shell: Rscript {0}
 
       - uses: r-lib/actions/check-r-package@v2
