--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -62,7 +62,7 @@ Config/testthat/parallel: false
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE, r6 = TRUE)
 RoxygenNote: 7.3.2
-VignetteBuilder: knitr
+VignetteBuilder: knitr, rmarkdown
 Collate:
     'Condition.R'
     'Design.R'
